--- a/cobigen-eclipse/cobigen-eclipse-test/src/main/resources/OpenAPITest/templates/pom.xml
+++ b/cobigen-eclipse/cobigen-eclipse-test/src/main/resources/OpenAPITest/templates/pom.xml
@@ -21,5 +21,13 @@
       </plugin>
     </plugins>
   </build>
+  
+  <dependencies>
+    <dependency>
+      <groupId>com.devonfw.cobigen</groupId>
+      <artifactId>openapiplugin-model</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
+    </dependency>
+  </dependencies>
 
 </project>
