try fix OpenAPITest

--- a/cobigen-eclipse/cobigen-eclipse-test/src/main/resources/OpenAPITest/templates/templates/templates.xml
+++ b/cobigen-eclipse/cobigen-eclipse-test/src/main/resources/OpenAPITest/templates/templates/templates.xml
@@ -5,7 +5,7 @@
     </templates>
     
     <templateScans>
-    	<templateScan templatePath="templates" destinationPath="src"/>
+    	<templateScan templatePath="templates" destinationPath="src/main/java"/>
   	</templateScans>
   	
     <increments>
