--- a/cobigen-templates/templates-oasp4j/src/main/templates/context.xml
+++ b/cobigen-templates/templates-oasp4j/src/main/templates/context.xml
@@ -83,6 +83,14 @@
       <variableAssignment type="property" key="etoName" value="name"/>
     </matcher>
   </trigger>
+  <trigger id="crud_openapi_net" type="openapi" templateFolder="crud_openapi_net">
+    <containerMatcher type="element" value="openAPIFile"/>
+    <matcher type="element" value="EntityDef">
+      <variableAssignment type="extension" key="rootPackage" value="x-rootpackage"/>
+      <variableAssignment type="property" key="component" value="componentName"/>
+      <variableAssignment type="property" key="entityName" value="name"/>
+    </matcher>
+  </trigger>  
   <trigger id="crud_ionic_client_app" type="java" templateFolder="crud_ionic_client_app">
     <matcher type="fqn" value="((.+\.)?([^\.]+))\.([^\.]+)\.logic\.api\.to\.([^\.]+)Eto">
       <variableAssignment type="regex" key="rootPackage" value="1"/>
