--- a/cobigen-templates/templates-devon4j/src/main/templates/context.xml
+++ b/cobigen-templates/templates-devon4j/src/main/templates/context.xml
@@ -83,6 +83,14 @@
       <variableAssignment type="property" key="etoName" value="name"/>
     </matcher>
   </trigger>
+  <trigger id="crud_openapi_angular_service_based_app" type="openapi" templateFolder="crud_openapi_angular_service_based_app">
+    <containerMatcher type="element" value="openAPIFile"/>
+    <matcher type="element" value="ComponentDef">
+      <variableAssignment type="constant" key="domain" value="demo"/>
+      <variableAssignment type="property" key="component" value="name"/>
+      <variableAssignment type="property" key="etoName" value="name"/>
+    </matcher>
+  </trigger>
   <trigger id="crud_openapi_net" type="openapi" templateFolder="crud_openapi_net">
     <containerMatcher type="element" value="openAPIFile"/>
     <matcher type="element" value="EntityDef">
