--- a/cobigen-templates/templates-devon4j/src/main/templates/context.xml
+++ b/cobigen-templates/templates-devon4j/src/main/templates/context.xml
@@ -21,6 +21,13 @@
       <variableAssignment type="regex" key="entityName" value="5"/>
     </matcher>
   </trigger>
+  <trigger id="crud_typescript_angular_client_app" type="typescript" templateFolder="crud_typescript_angular_client_app">
+    <matcher type="fqn" value="([^\.]+).entity">
+      <variableAssignment type="regex" key="entityName" value="1"/>
+      <variableAssignment type="regex" key="component" value="1"/>
+      <variableAssignment type="constant" key="domain" value="demo"/>
+    </matcher>
+  </trigger>
   <trigger id="testdata_builder" type="java" templateFolder="testdata_builder">
     <containerMatcher type="package" value="((.+\.)?([^\.]+))\.([^\.]+)\.dataaccess\.api"
       retrieveObjectsRecursively="false"/>
