generate sql script from entity

--- a/cobigen-templates/templates-devon4j/src/main/templates/context.xml
+++ b/cobigen-templates/templates-devon4j/src/main/templates/context.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <contextConfiguration xmlns="http://capgemini.com/devonfw/cobigen/ContextConfiguration" version="2.1">
-
+  <trigger id="sql" type="java" templateFolder="sql">
+    <matcher type="fqn" value="((.+\.)?([^\.]+))\.([^\.]+)\.dataaccess\.api\.([^\.]+)Entity">
+      <variableAssignment type="regex" key="entityName" value="5"/>
+    </matcher>
+  </trigger>
   <trigger id="crud_java_server_app" type="java" templateFolder="crud_java_server_app">
     <containerMatcher type="package" value="((.+\.)?([^\.]+))\.([^\.]+)\.dataaccess\.api"
       retrieveObjectsRecursively="false"/>
